@@ -147,4 +147,8 @@
     <forall-analyzers target="-append-module-dependencies-properties"/>
   </target>
 	
+  <target name="check-forbidden-apis">
+    <forall-analyzers target="check-forbidden-apis"/>
+  </target>
+
 </project>
