@@ -23,6 +23,11 @@
     Analyzer for indexing Polish
   </description>
 	
+  <property name="forbidden-sysout-excludes" value="
+    org/egothor/stemmer/Compile.class
+    org/egothor/stemmer/DiffIt.class
+  "/>
+
   <import file="../analysis-module-build.xml"/>
 
   <path id="classpath">
