@@ -174,64 +174,15 @@
     <lib-versions-check-macro dir="${common.dir}/.." centralized.versions.file="${common.dir}/ivy-versions.properties"/>
   </target>
 
-  <target name="check-forbidden-apis" depends="compile-tools,compile-test,install-forbidden-apis,-forbidden-apis-classpath,-check-forbidden-jdk-apis,-check-forbidden-test-apis,-check-system-out" description="Check forbidden API calls in compiled class files"/>
-
-  <!-- TODO: Make the forbidden API checks per module! -->
-  <target name="-forbidden-apis-classpath">
-    <path id="forbidden-apis.classpath">
-      <fileset dir="${basedir}" includes="**/lib/*.jar"/>
-      <dirset dir="${basedir}/build" includes="**/classes/*"/>
-    </path>
-  </target>
-
-  <target name="-check-forbidden-jdk-apis">
-    <forbidden-apis internalRuntimeForbidden="true" classpathref="forbidden-apis.classpath">
-      <bundledSignatures name="jdk-unsafe-${javac.target}"/>
-      <bundledSignatures name="jdk-deprecated-${javac.target}"/>
-      <signaturesFileSet dir="${common.dir}/tools/forbiddenApis">
-        <include name="base.txt" />
-      </signaturesFileSet>
-      <fileset dir="${basedir}/build" includes="**/*.class" />
-    </forbidden-apis>
-  </target>
-
-  <target name="-check-forbidden-test-apis">
-    <forbidden-apis signaturesFile="${common.dir}/tools/forbiddenApis/tests.txt" classpathref="forbidden-apis.classpath"> 
-      <classpath refid="junit-path"/>
-      <fileset dir="${basedir}/build" includes="**/classes/test/**/*.class,test-framework/**/*.class" />
-    </forbidden-apis>
-  </target>
-
-  <target name="-check-system-out">
-    <forbidden-apis bundledSignatures="jdk-system-out" classpathref="forbidden-apis.classpath">
-      <fileset dir="${basedir}/build">
-        <include name="**/classes/java/**/*.class"/>
-        <!-- this is basically tests -->
-        <exclude name="test-framework/**"/>
-        <!-- exclude command line tools -->
-        <exclude name="core/classes/java/org/apache/lucene/index/CheckIndex.class"/>
-        <exclude name="core/classes/java/org/apache/lucene/index/IndexUpgrader.class"/>
-        <exclude name="core/classes/java/org/apache/lucene/store/LockVerifyServer.class"/>
-        <exclude name="core/classes/java/org/apache/lucene/store/LockStressTest.class"/>
-        <exclude name="analysis/stempel/classes/java/org/egothor/stemmer/Compile.class"/>
-        <exclude name="analysis/stempel/classes/java/org/egothor/stemmer/DiffIt.class"/>
-        <exclude name="benchmark/**"/>
-        <exclude name="demo/classes/java/org/apache/lucene/**"/>
-        <exclude name="misc/classes/java/org/apache/lucene/index/CompoundFileExtractor.class"/>
-        <exclude name="misc/classes/java/org/apache/lucene/index/IndexSplitter.class"/>
-        <exclude name="misc/classes/java/org/apache/lucene/index/MultiPassIndexSplitter.class"/>
-        <exclude name="misc/classes/java/org/apache/lucene/misc/GetTermInfo.class"/>
-        <exclude name="misc/classes/java/org/apache/lucene/misc/HighFreqTerms.class"/>
-        <exclude name="misc/classes/java/org/apache/lucene/misc/IndexMergeTool.class"/>
-        <!-- not printing, just checking if its a system stream -->
-        <exclude name="core/classes/java/org/apache/lucene/util/PrintStreamInfoStream.class"/>
-        <!-- not printing, just generated code from javacc -->
-        <exclude name="queryparser/classes/java/org/apache/lucene/queryparser/classic/QueryParserTokenManager.class"/>
-        <exclude name="queryparser/classes/java/org/apache/lucene/queryparser/flexible/standard/parser/StandardSyntaxParserTokenManager.class"/>
-        <exclude name="queryparser/classes/java/org/apache/lucene/queryparser/surround/parser/QueryParserTokenManager.class"/>
-        <exclude name="facet/classes/java/org/apache/lucene/facet/util/PrintTaxonomyStats.class"/>
-      </fileset>
-    </forbidden-apis>
+  <!-- -install-forbidden-apis is *not* a useless dependency. do not remove -->
+  <target name="check-forbidden-apis" depends="-install-forbidden-apis" description="Check forbidden API calls in compiled class files">
+    <subant target="check-forbidden-apis" failonerror="true" inheritall="false">
+      <propertyset refid="uptodate.and.compiled.properties"/>
+      <fileset dir="core" includes="build.xml"/>
+      <fileset dir="test-framework" includes="build.xml"/>
+      <fileset dir="tools" includes="build.xml"/>
+    </subant>
+    <modules-crawl target="check-forbidden-apis"/>
   </target>
 
   <target name="resolve">
