@@ -2176,13 +2176,52 @@ ${ant.project.name}.test.dependencies=${test.classpath.list}
   </target>
   
   <!-- Forbidden API Task -->
-  <target name="install-forbidden-apis" unless="forbidden-apis.loaded" depends="ivy-availability-check,ivy-configure">
+  <property name="forbidden-base-excludes" value=""/>
+  <property name="forbidden-tests-excludes" value=""/>
+  <property name="forbidden-sysout-excludes" value=""/>
+  
+  <target name="-install-forbidden-apis" unless="forbidden-apis.loaded" depends="ivy-availability-check,ivy-configure">
     <ivy:cachepath organisation="de.thetaphi" module="forbiddenapis" revision="1.3"
       inline="true" conf="default" transitive="true" pathid="forbidden-apis.classpath"/>
     <taskdef name="forbidden-apis" classname="de.thetaphi.forbiddenapis.AntTask" classpathref="forbidden-apis.classpath"/>
     <property name="forbidden-apis.loaded" value="true"/>
+  </target>  
+
+  <target name="-init-forbidden-apis" depends="-install-forbidden-apis">
+    <path id="forbidden-apis.allclasses.classpath">
+      <path refid="classpath"/>
+      <path refid="test.classpath"/>
+      <path refid="junit-path"/>
+      <!-- include the output directories, too (so we can still resolve excluded classes: -->
+      <pathelement path="${build.dir}/classes/java"/>
+      <pathelement path="${build.dir}/classes/test"/>
+    </path>
+  </target>  
+
+  <target name="check-forbidden-apis" depends="-check-forbidden-base,-check-forbidden-tests,-check-forbidden-sysout" description="Check forbidden API calls in compiled class files"/>
+  
+  <target name="-check-forbidden-base" depends="-init-forbidden-apis,compile-core,compile-test">
+    <forbidden-apis internalRuntimeForbidden="true" classpathref="forbidden-apis.allclasses.classpath">
+      <bundledSignatures name="jdk-unsafe-${javac.target}"/>
+      <bundledSignatures name="jdk-deprecated-${javac.target}"/>
+      <signaturesFileSet file="${common.dir}/tools/forbiddenApis/base.txt"/>
+      <fileset dir="${build.dir}/classes/java" excludes="${forbidden-base-excludes}"/>
+      <fileset dir="${build.dir}/classes/test" excludes="${forbidden-tests-excludes}" erroronmissingdir="false"/>
+    </forbidden-apis>
   </target>
   
+  <target name="-check-forbidden-tests" depends="-init-forbidden-apis,compile-test">
+    <forbidden-apis signaturesFile="${common.dir}/tools/forbiddenApis/tests.txt" classpathref="forbidden-apis.allclasses.classpath"> 
+      <fileset dir="${build.dir}/classes/test" excludes="${forbidden-tests-excludes}"/>
+    </forbidden-apis>
+  </target>
+    
+  <target name="-check-forbidden-sysout" depends="-init-forbidden-apis,compile-core">
+    <forbidden-apis bundledSignatures="jdk-system-out" classpathref="forbidden-apis.allclasses.classpath">
+      <fileset dir="${build.dir}/classes/java" excludes="${forbidden-sysout-excludes}"/>
+    </forbidden-apis>
+  </target>
+
   <!-- PEGDOWN macro: Before using depend on the target "resolve-pegdown,resolve-groovy" -->
   
   <target name="resolve-pegdown" unless="pegdown.loaded" depends="ivy-availability-check,ivy-configure">
