@@ -20,6 +20,11 @@
     Query parsers and parsing framework
   </description>
 
+  <!-- TODO: remove the stupid debugStream in the JavaCC TokenManager classes with an additional regex below! -->
+  <property name="forbidden-sysout-excludes" value="
+    org/apache/lucene/queryparser/**/*TokenManager.class
+  "/>
+
   <import file="../module-build.xml"/>
 
   <path id="classpath">
