@@ -42,6 +42,17 @@
   <!-- redefine the clover setup, because we dont want to run clover for the test-framework -->
   <target name="-clover.setup" if="run.clover"/>
 
+  <!-- redefine the test compilation, so its just a no-op -->
+  <target name="compile-test"/>
+  
+  <!-- redefine the forbidden apis for tests, as we check ourselves - no sysout testing -->
+  <target name="-check-forbidden-tests" depends="-init-forbidden-apis,compile-core">
+    <forbidden-apis signaturesFile="${common.dir}/tools/forbiddenApis/tests.txt" classpathref="forbidden-apis.allclasses.classpath"> 
+      <fileset dir="${build.dir}/classes/java"/>
+    </forbidden-apis>
+  </target>
+  <target name="-check-forbidden-sysout"/>
+
   <target name="javadocs-core" depends="javadocs"/>
   <target name="javadocs" depends="init,javadocs-lucene-core,javadocs-lucene-codecs">
     <sequential>
